--- a/tsukuttemanabo/Podfile
+++ b/tsukuttemanabo/Podfile
@@ -9,5 +9,7 @@ target 'tsukuttemanabo' do
   pod 'FSCalendar'
   pod 'CalculateCalendarLogic'
   pod 'Charts'
+  pod 'MessageKit'
+  pod 'MessageInputBar'
 
 end
